Higher include fonts in CSS, include title image in HTML (data url)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,8 +53,8 @@ layout: compress
     <style>{% include css/styles.min.css %}</style>
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Kreon:400,700|Poppins:500,600,700|Source+Code+Pro:500,600"
-          rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Kreon:400,700|Poppins:500,600,700|Source+Code+Pro:500,600"
+          rel="stylesheet"> -->
 
 </head>
 <body class="page-{{ page.title | slugify }} {% if page.url == '/' %}page-index{% endif %}">
