--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -1,6 +1,7 @@
 <div class="cover" id="home" style="background-image: url('{{ site.data.cover.image }}')">
     <div class="cover-inner">
-        <img src="{{ site.data.cover.logo }}">
+        <!-- <img src="{{ site.data.cover.logo }}"> -->
+        <img src="{% include images/title.base64 %}">
         <h1>{{ site.data.cover.title }}</h1>
         <p>{{ site.data.cover.subtitle }}</p>
         <a href="{{ site.data.cover.button.link }}" tabindex="-1">
