--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Kreon:400,700|Poppins:500,600,700|Source+Code+Pro:500,600');
+
 @import "import/variables";
 @import "import/palette";
 @import "import/mixins";
 @import "import/resets";
 @import "import/typography";
 @import "import/prism";
-
 
 /*
 // 3
