--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,6 @@ layout: compress
     <meta name="theme-color" content="#424242">
 
     <!-- Web components -->
-    <!-- <script async src="/bower_components/webcomponentsjs/webcomponents-lite.min.js?v={{ asset_version }}"></script> -->
     <script>{% include js/webcomponents-lite.min.js %}</script>
     <link rel="import" href="/bower_components/app-layout/app-layout.min.html">
     <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.min.html">
@@ -49,12 +48,7 @@ layout: compress
     <link rel="import" href="/bower_components/prism-element/prism-highlighter.min.html">
 
     <!-- Styles -->
-    <!-- <link rel="stylesheet" href="/res/css/styles.min.css?v={{ asset_version }}"> -->
     <style>{% include css/styles.min.css %}</style>
-
-    <!-- Fonts -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Kreon:400,700|Poppins:500,600,700|Source+Code+Pro:500,600"
-          rel="stylesheet"> -->
 
 </head>
 <body class="page-{{ page.title | slugify }} {% if page.url == '/' %}page-index{% endif %}">
@@ -142,9 +136,10 @@ layout: compress
 
 </app-drawer-layout>
 
-<script defer src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-<script defer src="/res/js/jquery.scrollto.min.js"></script>
-<script defer src="/res/js/scripts.min.js"></script>
+<script>{% include js/jquery-2.2.2.min.js %}</script>
+<script>{% include js/webfontloader.min.js %}</script>
+<script>{% include js/jquery.scrollto.min.js %}</script>
+<script>{% include js/scripts.min.js %}</script>
 
 </body>
 
