--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -1,5 +1,4 @@
-<!-- <div class="cover" id="home" style="background-image: url('{{ site.data.cover.image }}')"> -->
-<div class="cover" id="home" style="background-image: url('{% include images/title.base64 %}')">
+<div class="cover" id="home" style="background-image: url('{% if jekyll.environment == "production" %}{% include images/title.base64 %}{% else %}{{ site.data.cover.image }}{% endif %}')">
     <div class="cover-inner">
         <img src="{{ site.data.cover.logo }}">
         <h1>{{ site.data.cover.title }}</h1>
