--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,10 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Links -->
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <!-- Robots -->
     {% if jekyll.environment == "production" %}
@@ -26,14 +24,15 @@
     <link rel="icon" type="image/png" href="/favicon-32x32.png?v={{ asset_version }}" sizes="32x32">
     <link rel="icon" type="image/png" href="/android-chrome-192x192.png?v={{ asset_version }}" sizes="192x192">
     <link rel="icon" type="image/png" href="/favicon-16x16.png?v={{ asset_version }}" sizes="16x16">
-    <link rel="manifest" href="/manifest.json?v={{ asset_version }}">
     <link rel="mask-icon" href="/safari-pinned-tab.svg?v={{ asset_version }}" color="#dd1155">
     <link rel="shortcut icon" href="/favicon.ico?v={{ asset_version }}">
-    <meta name="apple-mobile-web-app-title" content="{{ site.name }}">
-    <meta name="application-name" content="{{ site.name }}">
-    <meta name="msapplication-TileColor" content="#dd1155">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png?v={{ asset_version }}">
+
+    <!-- Theme -->
+    <link rel="manifest" href="/manifest.json?v={{ asset_version }}">
+    <meta name="msapplication-TileColor" content="#dd1155">
     <meta name="theme-color" content="#424242">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Web components -->
     {% if jekyll.environment == "production" %}
