--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,12 @@ layout: compress
 
 {% include head.html %}
 
-<body class="page-{{ page.title | slugify }} {% if page.url == '/' %}page-index{% endif %}">
+{% if page.url == '/' %}
+{% assign is_index = true %}
+{% else %}
+{% assign is_index = false %}
+{% endif %}
+<body class="page-{{ page.title | slugify }} {% if is_index %}page-index{% endif %}">
 
 <app-drawer-layout fullbleed responsiveWidth="1024px">
 
@@ -42,7 +47,7 @@ layout: compress
 
     <app-header-layout>
 
-        <app-header fixed effects="{% if page.url == '/' %}waterfall{% endif %} fade-background">
+        <app-header fixed effects="waterfall{% if is_index %} fade-background{% endif %}">
             <app-toolbar>
                 <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
                 <h1 main-title>{{ site.name }}</h1>
