--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -586,7 +586,7 @@ p {
   margin-bottom: 16px; }
 
 a {
-  color: #f5b8cc;
+  color: #e75888;
   font-weight: 500; }
   a[tabindex="-1"], a[tabindex="0"] {
     text-decoration: none !important;
@@ -667,7 +667,7 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-  background: #272822; }
+  background: #262626; }
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
@@ -754,8 +754,8 @@ pre.code-toolbar {
 
 pre.code-toolbar > .toolbar {
   position: absolute;
-  top: .3em;
-  right: .2em;
+  top: 1.2em;
+  right: 1em;
   transition: opacity 0.3s ease-in-out;
   opacity: 0; }
 
@@ -785,12 +785,12 @@ pre.code-toolbar > .toolbar a,
 pre.code-toolbar > .toolbar button,
 pre.code-toolbar > .toolbar span {
   color: #bbb;
-  font-size: .8em;
-  padding: 0 .5em;
+  font-size: .9em;
+  padding: 0.15em .7em;
   background: #f5f2f0;
-  background: rgba(224, 224, 224, 0.2);
+  background: rgba(72, 72, 72, 0.9);
   box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.2);
-  border-radius: .5em; }
+  border-radius: 2em; }
 
 pre.code-toolbar > .toolbar a:hover,
 pre.code-toolbar > .toolbar a:focus,
