--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,8 +75,8 @@ layout: compress
             <footer>
                 <section>
                     © {{ site.time | date: '%Y' }} {{ site.author.name }}. {{ site.license }} •
-                    <a href="/disclaimer" title="Imprint / Disclaimer">Imprint / Disclaimer</a> •
-                    <a href="/privacy" title="Privacy">Privacy</a>
+                    <a href="/disclaimer/" title="Imprint / Disclaimer">Imprint / Disclaimer</a> •
+                    <a href="/privacy/" title="Privacy">Privacy</a>
                 </section>
                 <section>
                     Made using
